stop help text wrapping

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -30,7 +30,7 @@ $font-display: FinancierDisplayWeb, Georgia, serif;
   padding-left: 10px;
   width: 94%;
   box-sizing: border-box;
-  max-width: 400px;
+  max-width: 350px;
   min-height: 50px;
   font-size: 20px;
   color: white;
@@ -47,7 +47,7 @@ $font-display: FinancierDisplayWeb, Georgia, serif;
   }
 
   @include oGridRespondTo(S) {
-    padding-left: 20px;
+    padding-left: 10px;
   }
 
   &__container {
